--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.14",
     "cypress": "^12.17.2",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "start-server-and-test": "^2.0.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
     "vitest": "^0.33.0"
   }
