--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "check:style": "stylelint **/*.css",
+    "lint:style": "stylelint **/*.css --fix"
   },
   "dependencies": {
     "pinia": "^2.1.4",
+    "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
@@ -32,6 +36,7 @@
     "prettier": "^3.0.0",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.10.2",
+    "stylelint-config-sass-guidelines": "^10.0.0",
     "stylelint-config-standard": "^34.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
