--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:style": "stylelint **/*.css --fix"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.11.1",
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
