--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.11.1",
+    "firebase": "^8.10.1",
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
