--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "sass": "^1.66.1",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.10.2",
     "stylelint-config-sass-guidelines": "^10.0.0",
     "stylelint-config-standard": "^34.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^0.33.0"
   }
 }
