--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.11.1",
     "firebase": "^8.10.1",
+    "howler": "^2.2.3",
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
