--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.4.0",
     "vue-router": "^4.2.4",
     "yup": "^1.2.0"
   },
