--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "stylelint-config-standard": "^34.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
+    "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^0.33.0"
   }
