--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vee-validate/rules": "^4.11.1",
     "firebase": "^8.10.1",
     "howler": "^2.2.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
