refractor: code coverage

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.66.1",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.10.2",
