--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vite": "^4.4.6",
     "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
